fixed horizontal scrolling

--- a/Client/src/App.scss
+++ b/Client/src/App.scss
@@ -16,6 +16,8 @@ html{
 
 body{
   background-color: #202020;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 
